Feat/dff/latest updates of dff (#26)
* feat/dff/template: add template

* feat/dff/template: setup template

* feat/dff/template: upd template

* feat/dff/template: fix d-c.ym

* feat/dff/template: fix d-c configs

* feat/dff/template: fix formatters

* feat/dff/beatles: switch new version dff & short sceanrio & add nltk & add validation pass

* feat/dff/beatles: fix all

* feat/dff/beatles: add misc to response

* feat/dff/beatles: fix proxy

* feat/dff/beatles: fix requirements

* feat/dff/template: upd example

* feat/dff/template: upd test

* feat/dff/template: fix pharase

* feat/dff/template: upd port of template

* removed replicas for dff-template-skill

* fix: proxy hostname

* feat/dff/template: fix set_can_continue

* feat/dff/template: add id ignore for tests

* feat/dff/template_pr: add processing& upd conditions&add many hypotesis& upd scenario

* feat/dff/template_pr: fix previous

* feat/dff/template_pr: revert skipp other services

* feat/dff/template_pr: revert common/dialogflow_framework/extensions/custom_functions.py

* feat/dff/template_pr: fix style

* feat/dff/template_pr: fix style

* feat/dff/template_pr: fix style of formatters

Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -406,4 +406,10 @@ services:
       - "~/.deeppavlov:/root/.deeppavlov"
     ports:
       - 8103:8103
+  dff-template-skill:
+    volumes:
+      - "./skills/dff_template_skill:/src"
+      - "./common:/src/common"
+    ports:
+      - 8120:8120
 version: "3.7"
