--- a/gpu1.yml
+++ b/gpu1.yml
@@ -193,4 +193,6 @@ services:
       - "~/.deeppavlov:/root/.deeppavlov"
     environment:
       - CUDA_VISIBLE_DEVICES=9
+  dff-template-skill:
+    restart: unless-stopped
 version: '3.7'
