--- a/skills/dff_funfact_skill/Dockerfile
+++ b/skills/dff_funfact_skill/Dockerfile
@@ -3,12 +3,8 @@ FROM python:3.9.1
 # Do not change anything in this section 
 WORKDIR /src
 
-COPY common/dialogflow_framework/requirements.txt .
+COPY common/dff/requirements.txt .
 RUN pip install -r requirements.txt
-
-COPY common/dialogflow_framework/scripts /scripts
-
-RUN bash /scripts/programy_logger_off.sh
 
 # ###################### CUSTOM SECTION ######################################
 # Here you can make changes 
@@ -17,7 +13,8 @@ ARG SERVICE_NAME
 ENV SERVICE_NAME ${SERVICE_NAME}
 
 COPY skills/${SERVICE_NAME}/requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt && \
+    python -m nltk.downloader wordnet
 
 COPY skills/${SERVICE_NAME}/ ./
 COPY ./common/ ./common/
