dff-weather-skill: transfer to dff (#41)
* feat/dff/template_2: use only template

* dff-weather-skill: init commit

* dff-weather-skill: fix style, fix docstring, fix type hints, small code fixes

* dff-weather-skill: update README.md

* dff-weather-skill: fix README.md, change compare ratio threshold, move owm api key to env variables

* dff-weather-skill: add tests, fix shared memory, add data

* dff-weather-skill: change Dockerfile

* dff-weather-skill: move changes from dff-template to dff-weather

* dff-weather-skill: fix imports

* dff-weather-skill: fix codestyle

* dff-weather-skill: fix pipeline_conf.json

* dff-weather-skill: add newline

* pr/EgSergeenko/41: upd new dff into dff_weather_skill

* pr/EgSergeenko/41: drop token

* feat: turn on test when deploy skill

* fix: remove travel facts usage for codestyle

* fix: add to tests and no mentions in ink

* fix: test file permissions

* fix: remove old weather skill

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -119,12 +119,6 @@ services:
       - "./common:/src/common"
     ports:
       - 8032:8032
-  weather-skill:
-    volumes:
-      - "./skills/weather_skill:/src"
-      - "./common:/src/common"
-    ports:
-      - 8037:8037
   emotion-skill:
     volumes:
       - "./skills/emotion_skill:/src"
@@ -406,6 +400,12 @@ services:
       - "./common:/src/common"
     ports:
       - 8061:8061
+  dff-weather-skill:
+    volumes:
+      - "./skills/dff_weather_skill:/src"
+      - "./common:/src/common"
+    ports:
+      - 8037:8037
   dff-template-skill:
     volumes:
       - "./skills/dff_template_skill:/src"
