--- a/test.yml
+++ b/test.yml
@@ -67,7 +67,7 @@ services:
   asr:
   misheard-asr:
   book-skill:
-  weather-skill:
+  dff-weather-skill:
   emotion-skill:
   dummy-skill-dialog:
   meta-script-skill:
