--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         cobot-nounphrases:8006, program-y:8008, sentseg:8011, convers-evaluation-selector:8009, personality-catcher:8010,
         intent-responder:8012, intent-catcher:8014, blacklisted-words:8018,
         sentrewrite:8017, ner:8021, program-y-dangerous:8022, dff-movie-skill:8023,
-        convert-reddit:8029, personal-info-skill:8030, asr:8031, misheard-asr:8033, weather-skill:8037,
+        convert-reddit:8029, personal-info-skill:8030, asr:8031, misheard-asr:8033, dff-weather-skill:8037,
         eliza:8047, emotion-skill:8049, dummy-skill-dialog:8052, comet-atomic:8053, meta-script-skill:8054,
         dff-coronavirus-skill:8061, small-talk-skill:8062, game-cooperative-skill:8068, program-y-wide:8064,
         comet-conceptnet:8065, news-api-skill:8066, short-story-skill:8057, factoid-qa:8071, kbqa:8072,
@@ -332,21 +332,6 @@ services:
           memory: 2540M
         reservations:
           memory: 2540M
-
-  weather-skill:
-    env_file: [.env]
-    build:
-      context: .
-      dockerfile: ./skills/weather_skill/Dockerfile
-    command: python -m flask run -h 0.0.0.0 -p 8037
-    environment:
-      - FLASK_APP=server
-    deploy:
-      resources:
-        limits:
-          memory: 1152M
-        reservations:
-          memory: 1152M
 
   emotion-skill:
     env_file: [.env]
@@ -1168,6 +1153,22 @@ services:
           memory: 192M
         reservations:
           memory: 192M
+
+  dff-weather-skill:
+    env_file: [.env]
+    build:
+      args:
+        SERVICE_PORT: 8037
+        SERVICE_NAME: dff_weather_skill
+      context: .
+      dockerfile: ./skills/dff_weather_skill/Dockerfile
+    command: gunicorn --workers=1 server:app -b 0.0.0.0:8037 --reload --timeout 500
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 1G
 
   dff-template-skill:
     env_file: [.env]
