feat: dff grounding skill (#32)
* feat/dff/template_2: use only template

* update dff

* update

* update

* pipeline_conf

* remove unused imports

* commonb_grounding_skill: fix pipeline

* commonb_grounding_skill: upd server.py

* tests

* commonb_grounding_skill: fix tests

* refactor: grounding skill replaved with new version, dff-template-skill restored

* refactor: newlines to the end of file

* fix: SERVICE_PORT variable for dff groungind skill

* pr/ms-Anastaisha/32: upd dff into grounding

* feat: turn on tests

* commonb_grounding_skill: add seed

* commonb_grounding_skill: fix tests

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -221,9 +221,9 @@ services:
       - "./annotators/spelling_preprocessing:/src"
     ports:
       - 8074:8074
-  grounding-skill:
+  dff-grounding-skill:
     volumes:
-      - "./skills/grounding_skill:/src"
+      - "./skills/dff_grounding_skill:/src"
       - "./common:/src/common"
     ports:
       - 8080:8080
