--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         factoid-classification:8073, spelling-preprocessing:8074, entity-linking:8075, wiki-parser:8077, text-qa:8078,
         knowledge-grounding:8083, combined-classification:8087, knowledge-grounding-skill:8085,
         dff-friendship-skill:8086, masked-lm:8088, entity-storer:8089,
-        book-skill:8032, grounding-skill:8080,
+        book-skill:8032, dff-grounding-skill:8080,
         dff-animals-skill:8094, dff-travel-skill:8096, dff-food-skill:8097, dff-sport-skill:8098, dff-science-skill:8101,
         midas-classification:8090, fact-random:8119, fact-retrieval:8100,
         dff-funfact-skill:8104, dff-bot-persona-skill:8105, news-api-annotator:8112,
@@ -644,20 +644,21 @@ services:
         reservations:
           memory: 50M
 
-  grounding-skill:
+  dff-grounding-skill:
     env_file: [.env]
     build:
+      args:
+        SERVICE_PORT: 8080
+        SERVICE_NAME: dff_grounding_skill
       context: .
-      dockerfile: ./skills/grounding_skill/Dockerfile
-    command: flask run -h 0.0.0.0 -p 8080
-    environment:
-      - FLASK_APP=server
+      dockerfile: ./skills/dff_grounding_skill/Dockerfile
+    command: gunicorn --workers=1 server:app -b 0.0.0.0:8080 --reload
     deploy:
       resources:
         limits:
-          memory: 80M
+          memory: 128M
         reservations:
-          memory: 80M
+          memory: 128M
 
   knowledge-grounding:
     env_file: [.env]
