feat: rename to spacy nounphrases (#51)
* feat: rename to spacy nounphrases

* feat: add tests

* fix: replace cobot nounphrases mentions

--- a/cpu.yml
+++ b/cpu.yml
@@ -7,7 +7,7 @@ services:
   kbqa:
     environment:
       CUDA_VISIBLE_DEVICES: ""
-  cobot-nounphrases:
+  spacy-nounphrases:
     environment:
       CUDA_VISIBLE_DEVICES: ""
   comet-atomic:
