Feat: dff-short-story-skill  (#33)
* feat/dff/template_2: use only template

* init

* init

* move from short-stpry-skills to dff template

* short-story-skill pr #1

* short-story-skill pr 1

* Add readme and comments

* feat/dff/template_2: fix style

* feat/dff/template_2: fix style

* fixed bag, deleted duplicates, renamed functions, fixed style

* fixed bag, deleted duplicates, renamed functions, fixed style

* style fixed also

* added tests and spaces between phrases

* new result of test with spaces between phrases

* test tell_funny_story

* feat/dff/template_2: fix bugs

* feat/dff/template_2: rebert short_story_skill

* feat/dff/template_2: upd skill

* pr/akalmanbay/33: dff upd

* fix: turning on dff_short_story_skill

* fix: revert response selector

* feat: dff short story skill

* fix: revert dff-template-skill

* fix: tests for dff-template-skill

* fix: test out config

* fix: tests

* fix: tests

* fix: tests

* feat/dff/template_2: fix tests

* fix: new components names for this skill

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: Akma <akalmanbay@gmail.com>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -142,12 +142,6 @@ services:
       - "./common:/src/common"
     ports:
       - 8054:8054
-  short-story-skill:
-    volumes:
-      - "./skills/short_story_skill:/src"
-      - "./common:/src/common"
-    ports:
-      - 8057:8057
   small-talk-skill:
     volumes:
       - "./skills/small_talk_skill:/src"
@@ -400,6 +394,12 @@ services:
       - "./common:/src/common"
     ports:
       - 8061:8061
+  dff-short-story-skill:
+    volumes:
+      - "./skills/dff_short_story_skill:/src"
+      - "./common:/src/common"
+    ports:
+      - 8057:8057
   dff-weather-skill:
     volumes:
       - "./skills/dff_weather_skill:/src"
