--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         convert-reddit:8029, personal-info-skill:8030, asr:8031, misheard-asr:8033, dff-weather-skill:8037,
         eliza:8047, emotion-skill:8049, dummy-skill-dialog:8052, comet-atomic:8053, meta-script-skill:8054,
         dff-coronavirus-skill:8061, small-talk-skill:8062, game-cooperative-skill:8068, program-y-wide:8064,
-        comet-conceptnet:8065, news-api-skill:8066, short-story-skill:8057, factoid-qa:8071, kbqa:8072,
+        comet-conceptnet:8065, news-api-skill:8066, dff-short-story-skill:8057, factoid-qa:8071, kbqa:8072,
         factoid-classification:8073, spelling-preprocessing:8074, entity-linking:8075, wiki-parser:8077, text-qa:8078,
         knowledge-grounding:8083, combined-classification:8087, knowledge-grounding-skill:8085,
         dff-friendship-skill:8086, masked-lm:8088, entity-storer:8089,
@@ -422,21 +422,6 @@ services:
           memory: 256M
         reservations:
           memory: 256M
-
-  short-story-skill:
-    env_file: [.env]
-    build:
-      context: .
-      dockerfile: ./skills/short_story_skill/Dockerfile
-    command: flask run -h 0.0.0.0 -p 8057
-    environment:
-      - FLASK_APP=server
-    deploy:
-      resources:
-        limits:
-          memory: 80M
-        reservations:
-          memory: 80M
 
   small-talk-skill:
     env_file: [.env]
@@ -1154,6 +1139,22 @@ services:
           memory: 192M
         reservations:
           memory: 192M
+
+  dff-short-story-skill:
+    env_file: [.env]
+    build:
+      args:
+        SERVICE_PORT: 8057
+        SERVICE_NAME: dff_short_story_skill
+      context: .
+      dockerfile: ./skills/dff_short_story_skill/Dockerfile
+    command: gunicorn --workers=1 server:app -b 0.0.0.0:8057 --reload
+    deploy:
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 128M
 
   dff-weather-skill:
     env_file: [.env]
