--- a/proxy.yml
+++ b/proxy.yml
@@ -198,15 +198,6 @@ services:
       - PROXY_PASS=lnsigo.mipt.ru:8054
       - PORT=8054
 
-  short-story-skill:
-    command: ["nginx", "-g", "daemon off;"]
-    build:
-      context: dp/proxy/
-      dockerfile: Dockerfile
-    environment:
-      - PROXY_PASS=lnsigo.mipt.ru:8057
-      - PORT=8057
-
   small-talk-skill:
     command: ["nginx", "-g", "daemon off;"]
     build:
@@ -594,14 +585,23 @@ services:
       - PORT=8061
     command: [ "nginx", "-g", "daemon off;" ]
 
+  dff-short-story-skill:
+    build:
+      context: dp/proxy/
+      dockerfile: Dockerfile
+    environment:
+      - PROXY_PASS=lnsigo.mipt.ru:8057
+      - PORT=8057
+    command: [ "nginx", "-g", "daemon off;" ]
+
   dff-weather-skill:
-    command: ["nginx", "-g", "daemon off;"]
     build:
       context: dp/proxy/
       dockerfile: Dockerfile
     environment:
       - PROXY_PASS=lnsigo.mipt.ru:8037
       - PORT=8037
+    command: ["nginx", "-g", "daemon off;"]
 
   dff-template-skill:
     build:
