Feat: Programy-dangerous to dff (#39)
* feat/dff/template_2: use only template

* program-y: Rewrite Program-Y service from sanic to dff

* program-y: Rewrite Program-Y-Dangerous service from sanic to dff

* fix: rename service and folder, fix tests

* feat: revert template skill

* fix: turn on tests when init

* feat: program_y_dangerous in ymls

* feat: program_y_dangerous configs

* fix: revert extra changes

* fix: import

* fix: change everything to current commonb version

* fix: remove dream_aiml

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,14 +202,18 @@ services:
   program-y-dangerous:
     env_file: [.env]
     build:
+      args:
+        SERVICE_PORT: 8022
+        SERVICE_NAME: program_y_dangerous
       context: .
-      dockerfile: ./skills/program-y-dangerous/Dockerfile
+      dockerfile: ./skills/program_y_dangerous/Dockerfile
+    command: gunicorn --workers=1 server:app -b 0.0.0.0:8022 --reload
     deploy:
       resources:
         limits:
-          memory: 256M
+          memory: 1024M
         reservations:
-          memory: 256M
+          memory: 1024M
 
   dff-movie-skill:
     env_file: [.env]
