--- a/dev.yml
+++ b/dev.yml
@@ -64,10 +64,8 @@ services:
       - 8018:8018
   program-y-dangerous:
     volumes:
-      - "./skills/program-y-dangerous:/src"
-      - "./skills/program-y-dangerous/logs:/tmp"
-      - "./common:/src/dream_aiml/src/common"
-      - "./state_formatters:/src/dream_aiml/src/state_formatters"
+      - "./skills/program_y_dangerous:/src"
+      - "./common:/src/common"
     ports:
       - 8022:8022
   dff-movie-skill:
