COMMoN: COMeT Refactoring (#28)
* removed unnecessary layers

* server refactoring

* repo structure is built

* removed duplicates

* comet custom modules change

* utils.utils refactored

* utils.utils refactored

* device id better validation

* utils and comet postprocessing refactoring

* dead code removed

* postprocessing refactoring

* flake8 styling fixes

* required changes for PR

* required changes for PR

* tests and common gitkeep

* fix: docker containers

* env and path handling changes

* removed settings import

* removed useless prints

* removed useless import

* commonb: upd dev.yml

* dockerfile fix

* dockerfile fix

* feat: add common in dockerfile

* fix cuda enumeration

* fix cuda device usages

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>
Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -127,9 +127,15 @@ services:
     ports:
       - 8052:8052
   comet-atomic:
+    volumes:
+      - "./annotators/COMeT:/src"
+      - "./common:/src/common"
     ports:
       - 8053:8053
   comet-conceptnet:
+    volumes:
+      - "./annotators/COMeT:/src"
+      - "./common:/src/common"
     ports:
       - 8065:8065
   meta-script-skill:
