--- a/annotators/COMeT/requirements.txt
+++ b/annotators/COMeT/requirements.txt
@@ -1,7 +1,8 @@
-flask==1.1.1
-gunicorn==19.9.0
-pandas==0.24.2
+fastapi==0.68.1
+pydantic==1.8.2
+uvicorn[standard]==0.15.0
+pandas==1.1.5
 spacy==2.2.3
 ftfy==5.1
 requests==2.22.0
-sentry-sdk[flask]==0.14.1
+sentry-sdk[asgi]==1.3.1
