fact retrieval refactoring (#30)
* move all conf file to new folder 'configs'

* rename test file

* move file to new folder 'data'

* move test to text file and test folder

* rewrite test

* remove unused Dockerfile and rename DockerfileFactRetrievalEnt to Dockerfile

* drop unused configs

* drop copy empty directory

* read confing name from env vars and move hardcore file path to variable

* move duplicated code to function

* remove unused function

* use file from /common dir and remove them from /data dir

* move page_preprocessor.py to /common dir.

* run black code formatter

* change class_name in config for user page_preprocessor.py from /common dir

* rewrote test to general interface (handler + hypothesis + RANDOM_SEED)

* commonb_fact_retrieval: fix style

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>

--- a/annotators/fact_retrieval/Dockerfile
+++ b/annotators/fact_retrieval/Dockerfile
@@ -1,21 +1,18 @@
 FROM tensorflow/tensorflow:1.15.2-gpu
 
-RUN apt-get -y update && \
-    apt-get install -y software-properties-common && \
-    add-apt-repository ppa:openjdk-r/ppa && \
-    apt-get -y update && \
-    apt install -y openjdk-11-jdk && \
-    apt-get update && apt-get install git -y
-    
-RUN export JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64/bin/"
+RUN apt-get update && apt-get install git -y
 
 ARG CONFIG
+ARG CONFIG_WIKI
+ARG CONFIG_WHOW
 ARG COMMIT=0.13.0
 ARG PORT
 ARG SRC_DIR
 ARG SED_ARG=" | "
 
 ENV CONFIG=$CONFIG
+ENV CONFIG_WIKI=$CONFIG_WIKI
+ENV CONFIG_WHOW=$CONFIG_WHOW
 ENV PORT=$PORT
 
 COPY ./annotators/fact_retrieval/requirements.txt /src/requirements.txt
@@ -27,13 +24,10 @@ COPY $SRC_DIR /src
 
 WORKDIR /src
 COPY ./common/ ./common/
-RUN pip install pyserini==0.10.1.0
-RUN pip uninstall -y tensorflow
-RUN pip uninstall -y tensorflow-gpu
-RUN pip install tensorflow==1.15.2
-RUN pip install tensorflow-gpu==1.15.2
 RUN python -m deeppavlov install $CONFIG
 
 RUN sed -i "s|$SED_ARG|g" "$CONFIG"
+RUN sed -i "s|$SED_ARG|g" "$CONFIG_WIKI"
+RUN sed -i "s|$SED_ARG|g" "$CONFIG_WHOW"
 
 CMD gunicorn  --workers=1 --timeout 500 server:app -b 0.0.0.0:8100
