dff_book_skill refactoring (#58)
* template

* refining the transition rules

* changes in conditions

* fixed bug with book detection; universal functions separated; adapter for common functions adjusted

* minor fixes; add best book shortcut

* update stats in README

* fixed history bug; added tests

* style adjustments

* commonb: fix style

* commonb: upd version of flake

* commonb: fix tests

* rename processing

* rework incorrect tests

* appease codestyle

* commonb: upd messaging of tests

* commonb: add template into auto-tests

* rework test; correct processing

* bible test passing

* fix an error with random in main.py

* rerun black

* commonb: add template into selector

* alter tests; fix get_published_year; add 'used_phrases' to 'ignored keys'

* black

* fix common/response_selection.py

* style

* fix: replace book-skill with dff-book-skill

* fix: test configs

* fix: book skill mentions

* fix: format

* fix: no placeholders for strings

* fix: dff book skill formatter

* fix: no dff_template_skill for tests

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: kudep <kudep@Air-kudep.asvt.ru>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/dev.yml
+++ b/dev.yml
@@ -109,9 +109,9 @@ services:
       - "./common:/src/common"
     ports:
       - 8033:8033
-  book-skill:
+  dff-book-skill:
     volumes:
-      - "./skills/book_skill:/src"
+      - "./skills/dff_book_skill:/src"
       - "./common:/src/common"
     ports:
       - 8032:8032
