Refactor/intent responder (#85)
* refactor/using_df_engine: refactoring dff to df_engine

* feat/dff/template_v3: upd skill selector

* feat/dff/template_v3: response selector

* Update README.md

* Update README.md

* test modified

* DEV: skeleton for refactored skill dff_intent_responder_skill

* DEV: basic logic added

* DEV: additional logic implemented

* DEV: tests added

* DEV: Change history in readme added

* pr/vkmbox/82: revert unpermitted changes

* pr/vkmbox/82: revert unpermitted changes

* pr/vkmbox/82: upd formatter for intent responder

* DEV: codereview changes part1

* DEV: tests added

* DEV: description updated

* pr/vkmbox/82: revert .gitignore

* pr/vkmbox/82: upds

* pr/vkmbox/82: fix style

* pr/vkmbox/82: fix style

* DEV: readme is actualised according to the latest changes in dff

* feat: create dff_intent_responder_skill and separate it from template skill

* fix: codestyle

* fix: black codestyle

* fix: tests

* fix: test file rights

Co-authored-by: Denis Kuznetosv <kuznetsov.den.p@gmail.com>
Co-authored-by: Daniel Kornev <daniel@zetuniverse.com>
Co-authored-by: VK <vkmsoft@yandex.ru>
Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/assistant_dists/dream/dev.yml
+++ b/assistant_dists/dream/dev.yml
@@ -42,9 +42,9 @@ services:
       - "./annotators/SentRewrite:/src"
     ports:
       - 8017:8017
-  intent-responder:
+  dff-intent-responder-skill:
     volumes:
-      - "./skills/IntentResponder:/src"
+      - "./skills/dff_intent_responder_skill:/src"
       - "./common:/src/common"
     ports:
       - 8012:8012
