--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -9,7 +9,7 @@ services:
     environment:
       WAIT_HOSTS: "convers-evaluator-annotator:8004,
           spacy-nounphrases:8006, dff-program-y:8008, sentseg:8011, convers-evaluation-selector:8009, personality-catcher:8010,
-          intent-responder:8012, intent-catcher:8014, badlisted-words:8018,
+          dff-intent-responder-skill:8012, intent-catcher:8014, badlisted-words:8018,
           sentrewrite:8017, ner:8021, dff-program-y-dangerous:8022, dff-movie-skill:8023,
           convert-reddit:8029, personal-info-skill:8030, asr:8031, misheard-asr:8033, dff-weather-skill:8037,
           eliza:8047, emotion-skill:8049, dummy-skill-dialog:8052, comet-atomic:8053, meta-script-skill:8054,
@@ -131,14 +131,15 @@ services:
         reservations:
           memory: 512M
 
-  intent-responder:
-    env_file: [.env]
+  dff-intent-responder-skill:
+    env_file: [ .env ]
     build:
+      args:
+        SERVICE_PORT: 8012
+        SERVICE_NAME: dff_intent_responder_skill
       context: .
-      dockerfile: ./skills/IntentResponder/Dockerfile
-    command: flask run -h 0.0.0.0 -p 8012
-    environment:
-      - FLASK_APP=server
+      dockerfile: ./skills/dff_intent_responder_skill/Dockerfile
+    command: gunicorn --workers=1 server:app -b 0.0.0.0:8012 --reload
     deploy:
       resources:
         limits:
