--- a/assistant_dists/dream/proxy.yml
+++ b/assistant_dists/dream/proxy.yml
@@ -44,7 +44,7 @@ services:
       - PROXY_PASS=dream.deeppavlov.ai:8017
       - PORT=8017
 
-  intent-responder:
+  dff-intent-responder-skill:
     command: ["nginx", "-g", "daemon off;"]
     build:
       context: dp/proxy/
