--- a/assistant_dists/dream/dev.yml
+++ b/assistant_dists/dream/dev.yml
@@ -1,7 +1,8 @@
 # С такими volumes удобно дебажить, не нужно пересобирать контейнер каждый раз при изменении кода
 services:
   agent:
-    command: sh -c 'bin/wait && python -m deeppavlov_agent.run -ch http_client --cors'
+    volumes:
+      - ".:/dp-agent"
     ports:
       - 4242:4242
   convers-evaluator-annotator:
