Feat/midas predictor en (#105)
* Fix requirements.txt (#84)

* feat: first version files for midas prediction annotator

* feat: midas prediction annotator

* fix itsdangerous requirements

* pin itsdangerous requirements for all flask==1.1.1 servers

* feat: midas cls sent tokenize only if needed (#101)

* feat: midas cls sent tokenize only if needed

* feat: take into account tokenized uttrs by bot

* fix: codestyle

* feat: midas predictor new code

* feat: requirements

* feat: midas dataset

* feat: variables and dockerfile

* feat: dockerfile

* fix: codestyle

* feat: midas prediction

* feat: formatter

* feat: correct context

* feat: correct requirements

* feat: itsdangerous requirements

* feat: model data path

* feat: model data path

* feat: gunicorn run

* feat: dockerfile running

* feat: dockerfile running

* feat: volumes

* feat: reqs

* feat: reqs

* feat: tests updates

* feat: tests

* black style

* fix: codestyle

* fix: upd seq preproc

Co-authored-by: Denis Kapelyushnik <8568400+deniskapel@users.noreply.github.com>

* fix: docstring

Co-authored-by: Denis Kapelyushnik <8568400+deniskapel@users.noreply.github.com>

* fix: fixes from review

* codestyle

* codestyle

Co-authored-by: Andrii.Hura <54397922+AndriiHura@users.noreply.github.com>
Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>
Co-authored-by: Denis Kapelyushnik <8568400+deniskapel@users.noreply.github.com>

--- a/annotators/midas_classification/Dockerfile
+++ b/annotators/midas_classification/Dockerfile
@@ -16,6 +16,7 @@ COPY . /src/
 WORKDIR /src
 
 RUN python -m deeppavlov install $CONFIG
+RUN python -m spacy download en_core_web_sm
 
 RUN sed -i "s|$SED_ARG|g" "$CONFIG"
 
