--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -1137,6 +1137,24 @@ services:
         reservations:
           memory: 512M
 
+  midas-predictor:
+    env_file: [ .env ]
+    build:
+      args:
+        SERVICE_PORT: 8121
+        SERVICE_NAME: midas_predictor
+      context: ./annotators/midas_predictor/
+    command: flask run -h 0.0.0.0 -p 8121
+    environment:
+      - CUDA_VISIBLE_DEVICES=0
+      - FLASK_APP=server
+    deploy:
+      resources:
+        limits:
+          memory: 3.5G
+        reservations:
+          memory: 3.5G
+
   dff-template-skill:
     env_file: [.env]
     build:
