--- a/assistant_dists/dream/gpu1.yml
+++ b/assistant_dists/dream/gpu1.yml
@@ -185,6 +185,10 @@ services:
     restart: unless-stopped
   dff-weather-skill:
     restart: unless-stopped
+  midas-predictor:
+    restart: unless-stopped
+    environment:
+      - CUDA_VISIBLE_DEVICES=7
   dff-template-skill:
     restart: unless-stopped
 version: '3.7'
