--- a/annotators/combined_classification/requirements.txt
+++ b/annotators/combined_classification/requirements.txt
@@ -1,10 +1,10 @@
 gunicorn==19.9.0
 sentry-sdk[flask]==0.14.1
 flask==1.1.1
+itsdangerous==2.0.1
 requests==2.22.0
 uvicorn==0.11.7
 prometheus-client==0.7.1
 filelock==3.0.12
 torch==1.5.1
 transformers==4.6.0
-
