--- a/assistant_dists/dream/cpu.yml
+++ b/assistant_dists/dream/cpu.yml
@@ -46,4 +46,7 @@ services:
     environment:
       DEVICE: cpu
       CUDA_VISIBLE_DEVICES: ""
+  midas-predictor:
+    environment:
+      CUDA_VISIBLE_DEVICES: ""
 
