--- a/assistant_dists/dream/test.yml
+++ b/assistant_dists/dream/test.yml
@@ -123,5 +123,8 @@ services:
       - CUDA_VISIBLE_DEVICES=8
   dff-coronavirus-skill:
   dff-short-story-skill:
+  midas-predictor:
+    environment:
+      - CUDA_VISIBLE_DEVICES=6
   dff-template-skill:
 version: '3.7'
