--- a/annotators/speech_function_classifier/Dockerfile
+++ b/annotators/speech_function_classifier/Dockerfile
@@ -1,15 +1,26 @@
-FROM python:3.7
+FROM pytorch/pytorch:1.9.0-cuda10.2-cudnn7-runtime
 
 WORKDIR /src
 
-COPY requirements.txt requirements.txt
+RUN apt-get update && apt-get install -y --allow-unauthenticated git curl && rm -rf /var/lib/apt/lists/*
+
+RUN mkdir /models && \
+    curl https://files.deeppavlov.ai/alexaprize_data/speech_function_classifier.tar.gz --output arch.tgz && \
+    tar zxfv arch.tgz && \
+    rm -rf arch.tgz && \
+    curl https://files.deeppavlov.ai/dream/speech_function_classifier/res_cor.json --output data/res_cor.json && \
+    mv data/* /models && \
+    rm -rf data
+
+COPY annotators/speech_function_classifier/requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
+RUN python -c "import nltk; nltk.download('punkt')"
+RUN python -c "model = 'DeepPavlov/bert-base-cased-conversational';\
+import transformers as tfmr;tfmr.AutoTokenizer.from_pretrained(model);tfmr.AutoModel.from_pretrained(model)"
 
-COPY models.py ./
-
-RUN python models.py
+COPY . ./
 
 ARG SERVICE_NAME
 ENV SERVICE_NAME ${SERVICE_NAME}
@@ -17,5 +28,4 @@ ENV SERVICE_NAME ${SERVICE_NAME}
 ARG SERVICE_PORT
 ENV SERVICE_PORT ${SERVICE_PORT}
 
-COPY ./* ./
-
+CMD gunicorn --workers=1 server:app -b 0.0.0.0:${SERVICE_PORT}
