--- a/annotators/speech_function_classifier/requirements.txt
+++ b/annotators/speech_function_classifier/requirements.txt
@@ -1,8 +1,11 @@
 fastapi==0.47.1
-transformers==4.4.2
-scikit-learn==0.21.2
-numpy==1.18.0
-pandas==0.25.3
-torch==1.8.1
 uvicorn==0.11.7
 sentry_sdk==0.13.3
+transformers==4.6.1
+nltk==3.6.2
+click==7.1.2
+requests==2.25.1 
+scipy==1.6.3
+pandas==1.2.4
+scikit-learn==0.22.2.post1
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz
