--- a/annotators/midas_predictor/Dockerfile
+++ b/annotators/midas_predictor/Dockerfile
@@ -1,8 +1,4 @@
-# syntax=docker/dockerfile:experimental
-
-FROM pytorch/pytorch:1.4-cuda10.1-cudnn7-runtime
-
-RUN apt-get update && apt-get install -y --allow-unauthenticated wget && rm -rf /var/lib/apt/lists/*
+FROM python:3.9.1
 
 COPY ./requirements.txt /src/requirements.txt
 
@@ -19,7 +15,5 @@ ARG SERVICE_PORT
 
 ENV SERVICE_NAME ${SERVICE_NAME}
 ENV SERVICE_PORT ${SERVICE_PORT}
-
-WORKDIR /src
 
 CMD gunicorn --workers=1 server:app -b 0.0.0.0:8121
