Feat/merge ignored nounphrases lists (#118)
* feat: merge ignored nounphrases

* fix: codestyle

* move ignore lists to separate dir and expose constants in init

* fix codestyle

* add docstring

* add ./common mount to spacy-nounphrases config

* feat: common for spacy-nounphrases

* fix: import

Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>

--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -44,7 +44,8 @@ services:
   spacy-nounphrases:
     env_file: [.env]
     build:
-      context: annotators/spacy_nounphrases/
+      context: .
+      dockerfile: ./annotators/spacy_nounphrases/Dockerfile
     command: flask run -h 0.0.0.0 -p 8006
     environment:
       - FLASK_APP=server
