--- a/assistant_dists/dream/dev.yml
+++ b/assistant_dists/dream/dev.yml
@@ -14,6 +14,7 @@ services:
   spacy-nounphrases:
     volumes:
       - "./annotators/spacy_nounphrases:/src"
+      - "./common:/src/common"
     ports:
       - 8006:8006
   dff-program-y-skill:
