--- a/skills/dff_friendship_skill/Dockerfile
+++ b/skills/dff_friendship_skill/Dockerfile
@@ -3,12 +3,8 @@ FROM python:3.9.1
 # Do not change anything in this section 
 WORKDIR /src
 
-COPY common/dialogflow_framework/requirements.txt .
+COPY common/dff/requirements.txt .
 RUN pip install -r requirements.txt
-
-COPY common/dialogflow_framework/scripts /scripts
-
-RUN bash /scripts/programy_logger_off.sh
 
 # ###################### CUSTOM SECTION ######################################
 # Here you can make changes 
