--- a/dockerfile_agent
+++ b/dockerfile_agent
@@ -29,7 +29,7 @@ RUN mkdir /pavlov && \
     pip install -e .
 
 RUN pip install sentry-sdk==0.16.0 requests==2.24.0 pandas GitPython==3.1.14 pyaml openpyxl==3.0.0 xlrd==1.2.0
-RUN pip install git+git://github.com/deepmipt/dp-agent.git@35960a8fb0ac8df8ecf75215c895a64c225c1490
+RUN pip install https://codeload.github.com/deepmipt/dp-agent/tar.gz/35960a8fb0ac8df8ecf75215c895a64c225c1490
 
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
