--- a/.github/workflows/black_codestyle.yml
+++ b/.github/workflows/black_codestyle.yml
@@ -16,7 +16,7 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black==20.8b1
+          pip install black==20.8b1 click==8.0.2
 
       - name: run codestyle
         run: |
