--- a/annotators/hypothesis_scorer/requirements.txt
+++ b/annotators/hypothesis_scorer/requirements.txt
@@ -1,8 +1,10 @@
 Flask==1.1.1
 itsdangerous==2.0.1
 simpletransformers==0.60.6
-sentry_sdk==0.13.3
+sentry-sdk[flask]==0.14.1
 tensorflow_text==0.1.0
 tensorflow-hub==0.7.0
 catboost==0.25.1
 torch==1.5
+jinja2==3.0.3
+Werkzeug==2.0.3
