--- a/common/dialogflow_framework/requirements.txt
+++ b/common/dialogflow_framework/requirements.txt
@@ -8,4 +8,6 @@ healthcheck==1.3.3
 programy==4.3
 git+https://github.com/deepmipt/dialog_flow_engine.git@3a2e3e5d99cd3090c8f72315885dc91d398f2d74
 # test
+jinja2<=3.0.3
+Werkzeug<=2.0.3
 requests==2.22.0
