--- a/dockerfile_agent
+++ b/dockerfile_agent
@@ -29,6 +29,7 @@ RUN mkdir /pavlov && \
     pip install -e .
 
 RUN pip install sentry-sdk==0.16.0 requests==2.24.0 pandas GitPython==3.1.14 pyaml openpyxl==3.0.0 xlrd==1.2.0
+RUN pip install jinja2==3.0.3 Werkzeug==2.0.3
 RUN pip install https://codeload.github.com/deepmipt/dp-agent/tar.gz/35960a8fb0ac8df8ecf75215c895a64c225c1490
 
 ENV LANG C.UTF-8
