--- a/services/wikidata_dial_service/requirements.txt
+++ b/services/wikidata_dial_service/requirements.txt
@@ -3,6 +3,8 @@ flask==1.1.1
 itsdangerous==2.0.1
 gunicorn==19.9.0
 requests==2.22.0
+jinja2<=3.0.3
+Werkzeug<=2.0.3
 torch==1.7.0
 torchtext==0.4.0
 transformers==4.0.0
