--- a/skills/factoid_qa/requirements.txt
+++ b/skills/factoid_qa/requirements.txt
@@ -6,3 +6,5 @@ numpy==1.17.2
 sentry-sdk==0.14.2
 spacy==2.2.3
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz#egg=en_core_web_sm==2.2.5
+jinja2<=3.0.3
+Werkzeug<=2.0.3
