--- a/skills/faq_skill_deepy/requirements.txt
+++ b/skills/faq_skill_deepy/requirements.txt
@@ -7,3 +7,5 @@ sentry-sdk==0.12.3
 spacy==2.2.3
 deeppavlov==0.14.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz#egg=en_core_web_sm==2.2.5
+jinja2<=3.0.3
+Werkzeug<=2.0.3
