factoid qa fixes (#143)
* Fix requirements.txt (#84)

* fix itsdangerous requirements

* pin itsdangerous requirements for all flask==1.1.1 servers

* factoid qa fixes

* update

* reformat

* update kbqa

* codestyle

* codestyle

* fix tests

* codestyle

* update requests version

* fixes

* fixes

* fixes

* fixes

* fixes

* add get_factoid function

* codestyle

* use get_factoid

* codestyle

Co-authored-by: Andrii.Hura <54397922+AndriiHura@users.noreply.github.com>
Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>
Co-authored-by: Dilyara Baymurzina <dilyara.rimovna@gmail.com>

--- a/skills/factoid_qa/requirements.txt
+++ b/skills/factoid_qa/requirements.txt
@@ -1,7 +1,8 @@
+pyopenssl==22.0.0
 flask==1.1.1
 itsdangerous==2.0.1
 gunicorn==19.9.0
-requests==2.22.0
+requests==2.27.1
 numpy==1.17.2
 sentry-sdk==0.14.2
 spacy==2.2.3
