--- a/annotators/kbqa/requirements.txt
+++ b/annotators/kbqa/requirements.txt
@@ -1,8 +1,11 @@
+pyopenssl==22.0.0
 sentry-sdk[flask]==0.14.1
 flask==1.1.1
 itsdangerous==2.0.1
 gunicorn==19.9.0
-requests==2.22.0
+requests==2.27.1
 jinja2<=3.0.3
 Werkzeug<=2.0.3
 click==7.1.2
+torch==1.6.0
+transformers==4.6.0
